# quaternion

./: .gitignore  CMakeLists.txt  README.md
include/: Quaternion.hpp
src/: Quaternion.cpp
test/: CMakeLists.txt  QuaternionTests.cpp
